fix toolbar styling, overflow padding issues

--- a/tutorials/simple-demo/frontend/src/DocumentViewer.module.css
+++ b/tutorials/simple-demo/frontend/src/DocumentViewer.module.css
@@ -1,12 +1,11 @@
 .toolbar {
   overflow: hidden;
-  padding-bottom: 10px;
   display: flex;
   background-color: #444;
   color: white;
   font-size: 20px;
-  padding: 10px;
   justify-content: center;
+  padding: 5px 0;
 }
 
 .toolbar-group {
@@ -19,11 +18,23 @@
   margin-right: 20px;
 }
 
+.toolbar-group > span {
+  padding: 5px;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.toolbar-group > span:hover {
+  background-color: #333;
+}
+
 .toolbar-group > span:not(:last-child) {
   margin-right: 5px;
 }
 
 .container {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 95vh;
   background-color: #777;
@@ -33,13 +44,13 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: calc(100% - 30px);
+  height: 100%;
   overflow: auto;
 }
 
 .content-container {
   padding: 30px;
-  height: calc(100% - 30px);
+  height: 100%;
   overflow: auto;
 }
 
